[package]
name = "hera"
version = "0.1.0"
edition = "2018"
authors = ["Mark H. Colburn <colburn.mark@gmail.com>"]
description = "An implementation of the Haverford Educational RISC Architecture in Rust."
repository = "https://github.com/markcol/hera-rs"
# A list of up to 5 categories from https://crates.io/category_slugs. Must match exactly.
categories = ["emulators", "development-tools"]
# A list of up to 5 keywords (free-form),
keywords = ["Haverford", "RISC", "Virtual Machine"]
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "markcol/hera-rs", branch = "master" }

[dependencies]
bitflags = "1.0"
